Add cancel link

--- a/HairSalon/Views/Clients/Edit.cshtml
+++ b/HairSalon/Views/Clients/Edit.cshtml
@@ -13,5 +13,5 @@ Edit: @Html.DisplayFor(model => model.Name)
   @Html.DropDownList("StylistId")
 
   <input type="submit" value="Save" class="btn btn-light" />
-
 }
+<p>@Html.ActionLink("Cancel", "Index")</p>
