--- a/HairSalon/Views/Clients/Index.cshtml
+++ b/HairSalon/Views/Clients/Index.cshtml
@@ -2,7 +2,8 @@
   Layout = "_Layout";
 }
 
-@using HairSalon.Models
+@using HairSalon.Models;
+@model List<HairSalon.Models.Client>;
 
 
 Clients
@@ -14,7 +15,7 @@ Clients
 
 @foreach (Client client in Model)
 {
-  <li>@Html.ActionLink($"{client.Name}", "Details", new { id = client.ClientId })</li>
+  <li>@Html.ActionLink($"{client.Name}", "Details", new { id = client.ClientId }) || Stylist: @client.Stylist.Name</li>
 }
 
 <p>@Html.ActionLink("Add a new Client", "Create")</p>
