--- a/HairSalon/Views/Clients/Index.cshtml
+++ b/HairSalon/Views/Clients/Index.cshtml
@@ -19,3 +19,5 @@ Clients
 }
 
 <p>@Html.ActionLink("Add a new Client", "Create")</p>
+<p>@Html.ActionLink("Return to Stylists", "Index", "Stylists")</p>
+<p>@Html.ActionLink("Home", "Index", "Home")</p>
