--- a/HairSalon/Views/Home/Index.cshtml
+++ b/HairSalon/Views/Home/Index.cshtml
@@ -5,4 +5,5 @@
 Welcome to Eau Claire's Schedulo-tron 5000
 
 <p>@Html.ActionLink("See all Stylists", "Index", "Stylists")</p>
-<p>@Html.ActionLink("Add a Stylist", "Create", "Stylists")</p>
+<p>@Html.ActionLink("Add New Stylist", "Create", "Stylists")</p>
+<p>@Html.ActionLink("Add New Client", "Create", "Clients")</p>
