--- a/HairSalon/Views/Home/Index.cshtml
+++ b/HairSalon/Views/Home/Index.cshtml
@@ -1,9 +1,8 @@
 @{
   Layout = "_Layout";
 }
-
-Welcome to Eau Claire's Schedulo-tron 5000
-
+<h2>Welcome to Eau Claire's Schedul-o-Tron 5000</h2>
+<hr />
 <p>@Html.ActionLink("See all Stylists", "Index", "Stylists")</p>
 <p>@Html.ActionLink("Add New Stylist", "Create", "Stylists")</p>
 <p>@Html.ActionLink("Add New Client", "Create", "Clients")</p>
