--- a/HairSalon/Views/Stylists/Index.cshtml
+++ b/HairSalon/Views/Stylists/Index.cshtml
@@ -4,7 +4,7 @@
 
 @using HairSalon.Models;
 
-Stylists
+<h2>Stylists</h2>
 
 @if (Model.Count == 0)
 {
@@ -15,6 +15,6 @@ Stylists
 {
   <li>@Html.ActionLink($"{stylist.Name} | {stylist.Specialty}", "Details", new { id = stylist.StylistId })</li>
 }
-
-<p>@Html.ActionLink("Add new Stylist", "Create")</p>
+<hr />
+<p>@Html.ActionLink("Add a new Stylist", "Create")</p>
 <p>@Html.ActionLink("Return Home", "Index", "Home")</p>
