--- a/HairSalon/Views/Stylists/Details.cshtml
+++ b/HairSalon/Views/Stylists/Details.cshtml
@@ -4,7 +4,7 @@
 
 @model HairSalon.Models.Stylist
 
-Stylist Details
+<h2>Stylist Details</h2>
 
 <h3>@Html.DisplayNameFor(model => model.Name): @Html.DisplayFor(model => model.Name)</h3>
 <h3>@Html.DisplayNameFor(model => model.Specialty): @Html.DisplayFor(model => model.Specialty)</h3>
