--- a/HairSalon/Views/Stylists/Edit.cshtml
+++ b/HairSalon/Views/Stylists/Edit.cshtml
@@ -4,20 +4,21 @@
 
 @model HairSalon.Models.Stylist
 
-Edit Stylist
+<h2>Edit Stylist</h2>
 
-Stylist: @Html.DisplayFor(model => model.Name)
-
+<p>@Html.DisplayFor(model => model.Name)</p>
+<hr />
 @using (Html.BeginForm())
 {
   @Html.HiddenFor(model => model.StylistId)
 
-  @Html.LabelFor(model => model.Name)
-  @Html.EditorFor(model => model.Name)
+  <h2>@Html.LabelFor(model => model.Name)</h2>
+  <p>@Html.EditorFor(model => model.Name)</p>
 
-  @Html.LabelFor(model => model.Specialty)
-  @Html.EditorFor(model => model.Specialty)
+  <h2>@Html.LabelFor(model => model.Specialty)</h2>
+  <p>@Html.EditorFor(model => model.Specialty)</p>
 
   <input type="submit" value="Save" class="btn btn-light" />
 }
-<p>@Html.ActionLink("Back to list", "Index")</p>
+<hr />
+<p>@Html.ActionLink("Back to List", "Index")</p>
