--- a/HairSalon/Views/Stylists/Delete.cshtml
+++ b/HairSalon/Views/Stylists/Delete.cshtml
@@ -4,7 +4,7 @@
 
 @model HairSalon.Models.Stylist
 
-Are you sure you want to delete this Stylist?
+<h2>Are you sure you want to delete this Stylist?</h2>
 
 <h3>@Html.DisplayNameFor(model => model.Name): @Html.DisplayFor(model => model.Name)</h3>
 
@@ -12,5 +12,5 @@ Are you sure you want to delete this Stylist?
 {
   <input type="submit" value="Delete" class="btn btn-light" />
 }
-
-@Html.ActionLink("Back to Stylists", "Index")
+<hr />
+<p>@Html.ActionLink("Back to Stylists", "Index")</p>
