--- a/HairSalon/Views/Clients/Index.cshtml
+++ b/HairSalon/Views/Clients/Index.cshtml
@@ -6,8 +6,8 @@
 @model List<HairSalon.Models.Client>;
 
 
-Clients
-
+<h2>Clients</h2>
+<hr />
 @if (@Model.Count == 0)
 {
   <h3>This stylist doesn't have any clients added yet!</h3> 
@@ -15,9 +15,9 @@ Clients
 
 @foreach (Client client in Model)
 {
-  <li>@Html.ActionLink($"{client.Name}", "Details", new { id = client.ClientId }) || Stylist: @client.Stylist.Name</li>
+  <li>@Html.ActionLink($"{client.Name}", "Details", new { id = client.ClientId })--->   Stylist: @client.Stylist.Name</li>
 }
-
+<hr />
 <p>@Html.ActionLink("Add a new Client", "Create")</p>
 <p>@Html.ActionLink("Return to Stylists", "Index", "Stylists")</p>
 <p>@Html.ActionLink("Home", "Index", "Home")</p>
