--- a/HairSalon/Views/Clients/Details.cshtml
+++ b/HairSalon/Views/Clients/Details.cshtml
@@ -4,10 +4,10 @@
 
 @model HairSalon.Models.Client
 
-Client Details
-
+<h2>Client Details</h2>
+<hr />
 <h3>@Html.DisplayNameFor(model => model.Name): @Html.DisplayFor(model => model.Name)</h3>
-
+<hr />
 <p>@Html.ActionLink("Edit Client Profile", "Edit", new { id = Model.ClientId })</p>
 <p>@Html.ActionLink("Delete Client Profile", "Delete", new { id = Model.ClientId })</p>
 <p>@Html.ActionLink("See All Clients", "Index")</p>
