--- a/HairSalon/Views/Clients/Edit.cshtml
+++ b/HairSalon/Views/Clients/Edit.cshtml
@@ -3,18 +3,19 @@
 }
 @model HairSalon.Models.Client;
 
-Edit: @Html.DisplayFor(model => model.Name)
-
+<h2>Edit: @Html.DisplayFor(model => model.Name)</h2>
+<hr />
 @using (Html.BeginForm())
 {
   @Html.HiddenFor(model => model.ClientId)
 
-  @Html.LabelFor(model => model.Name)
-  @Html.TextBoxFor(model => model.Name, new {required = "required"})
+  <h2>@Html.LabelFor(model => model.Name)</h2>
+  <p>@Html.TextBoxFor(model => model.Name, new {required = "required"})</p>
 
-  @Html.LabelFor(model => model.Stylist)
-  @Html.DropDownList("StylistId")
+  <h2>@Html.LabelFor(model => model.Stylist)</h2>
+  <p>@Html.DropDownList("StylistId")</p>
 
   <input type="submit" value="Save" class="btn btn-light" />
 }
+<hr />
 <p>@Html.ActionLink("Cancel", "Index")</p>
