--- a/HairSalon/Views/Clients/Delete.cshtml
+++ b/HairSalon/Views/Clients/Delete.cshtml
@@ -12,4 +12,4 @@
   <input type="submit" value="Delete" class="btn btn-light" />
 }
 <hr />
-@Html.ActionLink("Back to Clients", "Index")
+<p>@Html.ActionLink("Back to Clients", "Index")</p>
